--- a/FlickrApp/FlickrApp/UI/Base.lproj/Main.storyboard
+++ b/FlickrApp/FlickrApp/UI/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -59,6 +60,7 @@
         <scene sceneID="r7l-gg-dq7">
             <objects>
                 <navigationController id="vC3-pB-5Vb" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="vNS-2T-YlN"/>
                     <navigationBar key="navigationBar" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="DjV-YW-jjY">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -78,14 +80,81 @@
                     <view key="view" contentMode="scaleToFill" id="7S2-bu-igf">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="UcF-yN-TSp">
+                                <rect key="frame" x="0.0" y="88" width="414" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="eDI-1n-qxa"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="05e-VF-ejb" id="t6c-ru-Zd6"/>
+                                </connections>
+                            </searchBar>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="fet-QM-pcU">
+                                <rect key="frame" x="16" y="148" width="382" height="714"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="eIp-yn-pru">
+                                    <size key="itemSize" width="100" height="100"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCell" id="BIc-KJ-njX" customClass="PhotoCell" customModule="FlickrApp" customModuleProvider="target">
+                                        <rect key="frame" x="10" y="0.0" width="100" height="100"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="6fw-5d-xLK">
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hP7-q0-1ZL">
+                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="hP7-q0-1ZL" secondAttribute="trailing" id="IGV-uL-vDa"/>
+                                                <constraint firstItem="hP7-q0-1ZL" firstAttribute="leading" secondItem="6fw-5d-xLK" secondAttribute="leading" id="R4h-x5-kpf"/>
+                                                <constraint firstAttribute="bottom" secondItem="hP7-q0-1ZL" secondAttribute="bottom" id="dkc-Ly-8eL"/>
+                                                <constraint firstItem="hP7-q0-1ZL" firstAttribute="top" secondItem="6fw-5d-xLK" secondAttribute="top" id="llJ-WJ-TiC"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="100" height="100"/>
+                                        <connections>
+                                            <outlet property="imageView" destination="hP7-q0-1ZL" id="GwU-LL-x15"/>
+                                            <segue destination="vC3-pB-5Vb" kind="showDetail" identifier="showDetail" id="ZD0-IM-WdB"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="05e-VF-ejb" id="pcX-Mu-6bM"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="UcF-yN-TSp" firstAttribute="leading" secondItem="Eaw-81-l9r" secondAttribute="leading" id="AkE-b8-RJT"/>
+                            <constraint firstItem="fet-QM-pcU" firstAttribute="top" secondItem="UcF-yN-TSp" secondAttribute="bottom" constant="16" id="Jmo-ZG-RzB"/>
+                            <constraint firstItem="fet-QM-pcU" firstAttribute="bottom" secondItem="Eaw-81-l9r" secondAttribute="bottom" id="PpY-xW-Jr4"/>
+                            <constraint firstItem="Eaw-81-l9r" firstAttribute="trailing" secondItem="fet-QM-pcU" secondAttribute="trailing" constant="16" id="lTN-SF-H0h"/>
+                            <constraint firstItem="UcF-yN-TSp" firstAttribute="trailing" secondItem="Eaw-81-l9r" secondAttribute="trailing" id="pWq-Gt-olr"/>
+                            <constraint firstItem="fet-QM-pcU" firstAttribute="leading" secondItem="Eaw-81-l9r" secondAttribute="leading" constant="16" id="xTr-LB-J11"/>
+                            <constraint firstItem="UcF-yN-TSp" firstAttribute="top" secondItem="Eaw-81-l9r" secondAttribute="top" id="zYe-hD-600"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Eaw-81-l9r"/>
                     </view>
                     <navigationItem key="navigationItem" id="MU1-ut-afK"/>
+                    <connections>
+                        <outlet property="collectionView" destination="fet-QM-pcU" id="roP-LH-kgw"/>
+                        <outlet property="searchBar" destination="UcF-yN-TSp" id="e2G-O4-gFd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EO3-aT-qhw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="721.73913043478262" y="-630.13392857142856"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="ZD0-IM-WdB"/>
+    </inferredMetricsTieBreakers>
 </document>
