--- a/FlickrApp/FlickrApp/UI/Base.lproj/Main.storyboard
+++ b/FlickrApp/FlickrApp/UI/Base.lproj/Main.storyboard
@@ -33,7 +33,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IU2-r1-WY8">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" maximumZoomScale="10" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IU2-r1-WY8">
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="f45-Qh-SD9">
@@ -48,6 +48,9 @@
                                     <constraint firstItem="f45-Qh-SD9" firstAttribute="height" secondItem="IU2-r1-WY8" secondAttribute="height" id="fFG-cL-6eL"/>
                                     <constraint firstItem="f45-Qh-SD9" firstAttribute="trailing" secondItem="IU2-r1-WY8" secondAttribute="trailing" id="mhb-Su-tex"/>
                                 </constraints>
+                                <connections>
+                                    <outlet property="delegate" destination="JEX-9P-axG" id="Kht-84-pgX"/>
+                                </connections>
                             </scrollView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TvZ-iB-Ulg">
                                 <rect key="frame" x="16" y="821" width="382" height="25"/>
