--- a/FlickrApp/FlickrApp/UI/Base.lproj/Main.storyboard
+++ b/FlickrApp/FlickrApp/UI/Base.lproj/Main.storyboard
@@ -33,11 +33,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" maximumZoomScale="10" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IU2-r1-WY8">
-                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" alwaysBounceHorizontal="YES" maximumZoomScale="10" translatesAutoresizingMaskIntoConstraints="NO" id="IU2-r1-WY8">
+                                <rect key="frame" x="0.0" y="88" width="414" height="650"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="f45-Qh-SD9">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="725"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="650"/>
                                     </imageView>
                                 </subviews>
                                 <constraints>
@@ -52,10 +52,10 @@
                                     <outlet property="delegate" destination="JEX-9P-axG" id="Kht-84-pgX"/>
                                 </connections>
                             </scrollView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TvZ-iB-Ulg">
-                                <rect key="frame" x="16" y="821" width="382" height="25"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TvZ-iB-Ulg">
+                                <rect key="frame" x="16" y="746" width="382" height="100"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="25" id="0N0-76-zZc"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="100" id="0N0-76-zZc"/>
                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="300" id="zMK-dZ-Aq6"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -76,7 +76,7 @@
                         <viewLayoutGuide key="safeArea" id="VUw-jc-0yf"/>
                     </view>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Detail" id="mOI-FS-AaM"/>
+                    <navigationItem key="navigationItem" id="mOI-FS-AaM"/>
                     <connections>
                         <outlet property="detailsLabel" destination="TvZ-iB-Ulg" id="dGQ-IP-MQc"/>
                         <outlet property="imageView" destination="f45-Qh-SD9" id="jx3-Z1-mHb"/>
@@ -118,7 +118,7 @@
             </objects>
             <point key="canvasLocation" x="-45" y="129"/>
         </scene>
-        <!--Image List View Controller-->
+        <!--FlickrApp-->
         <scene sceneID="nH1-Jx-Fz1">
             <objects>
                 <viewController id="05e-VF-ejb" customClass="ImageListViewController" customModule="FlickrApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -189,7 +189,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Eaw-81-l9r"/>
                     </view>
-                    <navigationItem key="navigationItem" id="MU1-ut-afK"/>
+                    <navigationItem key="navigationItem" title="FlickrApp" id="MU1-ut-afK"/>
                     <connections>
                         <outlet property="collectionView" destination="fet-QM-pcU" id="roP-LH-kgw"/>
                         <outlet property="searchBar" destination="UcF-yN-TSp" id="e2G-O4-gFd"/>
