--- a/FlickrApp/FlickrApp/UI/Base.lproj/Main.storyboard
+++ b/FlickrApp/FlickrApp/UI/Base.lproj/Main.storyboard
@@ -36,17 +36,18 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" alwaysBounceHorizontal="YES" maximumZoomScale="10" translatesAutoresizingMaskIntoConstraints="NO" id="IU2-r1-WY8">
                                 <rect key="frame" x="0.0" y="88" width="414" height="650"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="f45-Qh-SD9">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sti-mB-383" customClass="UrlImageView" customModule="FlickrApp" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="650"/>
-                                    </imageView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="f45-Qh-SD9" firstAttribute="width" secondItem="IU2-r1-WY8" secondAttribute="width" id="H3a-Gz-zpv"/>
-                                    <constraint firstItem="f45-Qh-SD9" firstAttribute="top" secondItem="IU2-r1-WY8" secondAttribute="top" id="KrI-D9-LwX"/>
-                                    <constraint firstItem="f45-Qh-SD9" firstAttribute="leading" secondItem="IU2-r1-WY8" secondAttribute="leading" id="UKS-hM-gl5"/>
-                                    <constraint firstItem="f45-Qh-SD9" firstAttribute="bottom" secondItem="IU2-r1-WY8" secondAttribute="bottom" id="eFG-UN-mbw"/>
-                                    <constraint firstItem="f45-Qh-SD9" firstAttribute="height" secondItem="IU2-r1-WY8" secondAttribute="height" id="fFG-cL-6eL"/>
-                                    <constraint firstItem="f45-Qh-SD9" firstAttribute="trailing" secondItem="IU2-r1-WY8" secondAttribute="trailing" id="mhb-Su-tex"/>
+                                    <constraint firstAttribute="trailing" secondItem="Sti-mB-383" secondAttribute="trailing" id="43V-qI-J9j"/>
+                                    <constraint firstItem="Sti-mB-383" firstAttribute="leading" secondItem="IU2-r1-WY8" secondAttribute="leading" id="6WK-RA-Vw9"/>
+                                    <constraint firstItem="Sti-mB-383" firstAttribute="top" secondItem="IU2-r1-WY8" secondAttribute="top" id="AJZ-vx-b2X"/>
+                                    <constraint firstItem="Sti-mB-383" firstAttribute="width" secondItem="IU2-r1-WY8" secondAttribute="width" id="Wkn-M3-Qbh"/>
+                                    <constraint firstAttribute="bottom" secondItem="Sti-mB-383" secondAttribute="bottom" id="Zuc-ul-6cj"/>
+                                    <constraint firstItem="Sti-mB-383" firstAttribute="height" secondItem="IU2-r1-WY8" secondAttribute="height" id="gNk-77-g2p"/>
                                 </constraints>
                                 <connections>
                                     <outlet property="delegate" destination="JEX-9P-axG" id="Kht-84-pgX"/>
@@ -55,8 +56,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TvZ-iB-Ulg">
                                 <rect key="frame" x="16" y="746" width="382" height="100"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="100" id="0N0-76-zZc"/>
-                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="300" id="zMK-dZ-Aq6"/>
+                                    <constraint firstAttribute="height" constant="100" id="zMK-dZ-Aq6"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -79,7 +79,7 @@
                     <navigationItem key="navigationItem" id="mOI-FS-AaM"/>
                     <connections>
                         <outlet property="detailsLabel" destination="TvZ-iB-Ulg" id="dGQ-IP-MQc"/>
-                        <outlet property="imageView" destination="f45-Qh-SD9" id="jx3-Z1-mHb"/>
+                        <outlet property="imageView" destination="Sti-mB-383" id="Q1Q-Gc-TxZ"/>
                         <outlet property="scrollView" destination="IU2-r1-WY8" id="JAH-Dd-ITi"/>
                     </connections>
                 </viewController>
@@ -153,20 +153,21 @@
                                             <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hP7-q0-1ZL">
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b4x-Vt-hW8" customClass="UrlImageView" customModule="FlickrApp" customModuleProvider="target">
                                                     <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
-                                                </imageView>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="hP7-q0-1ZL" secondAttribute="trailing" id="IGV-uL-vDa"/>
-                                                <constraint firstItem="hP7-q0-1ZL" firstAttribute="leading" secondItem="6fw-5d-xLK" secondAttribute="leading" id="R4h-x5-kpf"/>
-                                                <constraint firstAttribute="bottom" secondItem="hP7-q0-1ZL" secondAttribute="bottom" id="dkc-Ly-8eL"/>
-                                                <constraint firstItem="hP7-q0-1ZL" firstAttribute="top" secondItem="6fw-5d-xLK" secondAttribute="top" id="llJ-WJ-TiC"/>
+                                                <constraint firstAttribute="trailing" secondItem="b4x-Vt-hW8" secondAttribute="trailing" id="SA7-ta-4yg"/>
+                                                <constraint firstItem="b4x-Vt-hW8" firstAttribute="top" secondItem="6fw-5d-xLK" secondAttribute="top" id="fhX-LD-GQG"/>
+                                                <constraint firstAttribute="bottom" secondItem="b4x-Vt-hW8" secondAttribute="bottom" id="kV8-Zk-e8a"/>
+                                                <constraint firstItem="b4x-Vt-hW8" firstAttribute="leading" secondItem="6fw-5d-xLK" secondAttribute="leading" id="qBA-Oz-Xze"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="100" height="100"/>
                                         <connections>
-                                            <outlet property="imageView" destination="hP7-q0-1ZL" id="GwU-LL-x15"/>
+                                            <outlet property="imageView" destination="b4x-Vt-hW8" id="5t7-Ve-9Ik"/>
                                             <segue destination="vC3-pB-5Vb" kind="showDetail" identifier="showDetail" id="ZD0-IM-WdB"/>
                                         </connections>
                                     </collectionViewCell>
@@ -201,6 +202,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Tll-UG-LXB"/>
+        <segue reference="ZD0-IM-WdB"/>
     </inferredMetricsTieBreakers>
 </document>
